# semantic-web-kms

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
app/: __init__.py  knowledge_pipeline.py
apps/engine/: MANIFEST.in  pyproject.toml
apps/engine/data/ontologies/: bfo.owl  catalog-v001.xml  dcterms.owl  doap.owl  foaf.owl  ontology_cache.json  schema.org.owl  wdo.owl
apps/engine/data/terms/: bfo-bot.txt  dcterms-mireot.txt  doap-mireot.txt  foaf-mireot.txt  schema.org-mireot.txt
apps/engine/src/engine/: knowledge_pipeline.py  run.py
apps/engine/src/engine/annotation/: __init__.py  analysis.py  constants.py  data_processing.py  generate_class_templates.py  postprocessing.py  semantic_annotator.py  similarity_calculator.py  text.py  utils.py
apps/engine/src/engine/annotation/prompts/: class_description_template.j2
apps/engine/src/engine/api/: __init__.py  config.py  exceptions.py  messages.py  server.py
apps/engine/src/engine/api/db/: __init__.py  agraph.py
apps/engine/src/engine/api/routes/: __init__.py  analytics.py  complexity.py  config.py  dashboard.py  entities.py  export.py  graph.py  health.py  input_dir.py  organizations.py  progress.py  relationships.py  repositories.py  search.py  sparql.py  upload.py
apps/engine/src/engine/api/schemas/: __init__.py
apps/engine/src/engine/api/services/: __init__.py  analysis_service.py  analytics_service.py  complexity_service.py  config_service.py  dashboard_service.py  entity_service.py  export_service.py  graph_service.py  input_dir_service.py  organization_service.py  progress_service.py  relationship_service.py  repository_service.py  search_service.py  sparql_service.py  upload_service.py
apps/engine/src/engine/api/sparql/analytics/: codebase_metrics.rq  entity_distribution.rq
apps/engine/src/engine/api/sparql/complexity/: complexity_distribution.rq  file_complexity.rq  overall_complexity.rq
apps/engine/src/engine/api/sparql/dashboard/: repositories_count.rq
apps/engine/src/engine/api/sparql/entities/: get_entity_details.rq  get_entity_relationships.rq
apps/engine/src/engine/api/sparql/graph/: graph_edges.rq  graph_nodes.rq
apps/engine/src/engine/api/sparql/organizations/: get_organization_details.rq  get_organization_file_count.rq  get_organization_relationship_count.rq  list_organizations.rq
apps/engine/src/engine/api/sparql/relationships/: relationship_types.rq
apps/engine/src/engine/api/sparql/repositories/: list_repositories.rq
apps/engine/src/engine/api/sparql/search/: search_entities.rq
apps/engine/src/engine/api/tasks/: __init__.py  analysis.py
apps/engine/src/engine/api/utils/: sparql_loader.py
apps/engine/src/engine/config/: __init__.py  carrier_types.json  code_queries.json  ontology_cache.json
apps/engine/src/engine/core/: __init__.py  config.py  graph_manager.py  namespaces.py  ontology_cache.py  paths.py  progress_tracker.py  rate_limiter.py
apps/engine/src/engine/extraction/: context.py  pipeline.py
apps/engine/src/engine/extraction/discovery/: file_discoverer.py  git_discoverer.py
apps/engine/src/engine/extraction/extractors/: code_extractor.py
apps/engine/src/engine/extraction/models/: code.py  core.py  doc.py  git.py
apps/engine/src/engine/extraction/parsers/: base_parser.py  comment_parser.py  csharp_parser.py  go_parser.py  java_parser.py  javascript_parser.py  markdown_parser.py  parser_factory.py  php_parser.py  python_parser.py  ruby_parser.py  rust_parser.py  specialized_doc_parser.py  typescript_parser.py
apps/engine/src/engine/extraction/rdf/: postprocessor.py  serializer.py  writers.py
apps/engine/src/engine/extraction/services/: asset_metadata_service.py  dependency_analysis_service.py  framework_detection_service.py  special_content_service.py
apps/engine/src/engine/extraction/strategies/: base.py  code_strategy.py  content_strategy.py  doc_strategy.py  file_strategy.py  git_strategy.py  repo_strategy.py
apps/engine/src/engine/extraction/utils/: __init__.py  classification_utils.py  file_discovery.py  parser_factory.py  registries.py
apps/engine/src/engine/ontology/: __init__.py  base.py  bfo.py  wdo.py
apps/engine/src/engine/triplestore/: agraph_connection.py
apps/engine/src/engine/utils/: generate_ontology_cache.py
apps/engine/tests/api/: test_server.py
apps/engine/tests/core/: test_graph_manager.py  test_ontology_cache.py
apps/engine/tests/extraction/: test_main_extractor.py  test_pipeline_integration.py
apps/engine/tests/extraction/extractors/edge_cases/: test_code_extractor_edge_cases.py
apps/engine/tests/extraction/extractors/integration/: test_code_extractor.py  test_content_extractor.py  test_doc_extractor.py
apps/engine/tests/extraction/ontology/: test_ontology_context.py
apps/engine/tests/extraction/utils/: test_file_utils.py  test_rdf_utils.py  test_string_utils.py
apps/engine/tests/extraction/writers/: test_ontology_writer.py
mappings/: carrier_types.json  code_queries.json  content_types.json  language_mapping.json  ontology_cache.json
model/: code_queries.json  content_types.json  excluded_directories.json  excluded_dirs.json  file_extensions.json  ontology_cache.json  web_development_extensions.json  web_development_ontology.graph  web_development_ontology.owl  web_development_ontology.properties
ontologies/: catalog-v001.xml  wdo.owl  wdo.properties  web_development_ontology.owl
portal/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  script.js  styles.css  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: backend-checks.sh  frontend-checks.sh  local-checks.sh  performance-test.sh  regenerate-ontology-cache.sh  security-checks.sh  test-integration.sh
tests/: test_api_endpoints.py  test_base_ontology.py  test_bfo_ontology.py  test_code_extractor.py  test_core_paths.py  test_doc_extractor.py  test_file_extractor.py  test_generate_ontology_cache.py  test_git_extractor.py  test_graph_manager.py  test_integration_pipeline.py  test_knowledge_graph.py  (+6 more)
(+404 files in other folders)
