[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-web-kms"
version = "0.1.0"
description = "Semantic Web Knowledge Management System"
authors = [
    {name = "Group One, CoSc 6232 (Spring 2025)", email = "semanticwebkms@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["semantic-web", "knowledge-management", "ontology", "rdf", "sparql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic==2.11.7",
    "rdflib==7.1.4",
    "rich==13.7.1",
    "gitpython==3.1.44",
    "tree-sitter==0.25.0",
    "markdown-it-py==3.0.0",
    "Pillow==10.3.0",
    "flask==3.1.1",
    "flask-caching==2.3.1",
    "flask-cors==6.0.1",
    "requests==2.32.4",
    "python-dotenv==1.1.1",
    "jinja2==3.1.6",
    "spacy==3.8.7",
    "nltk==3.9.1",
    "textstat==0.7.7",
    "google-genai==1.25.0",
    "scikit-learn==1.7.0",
    "networkx==3.5",
    "gunicorn==23.0.0",
    "pydantic-settings>=2.10.1",
    "psutil>=7.0.0",
    "celery>=5.5.3",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-php>=0.23.11",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-css>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "mypy==1.16.1",
    "pyright==1.1.403",
    "vulture==2.14",
    "ruff==0.12.3",
    "pip-audit==2.9.0",
    "bandit==1.8.6",
    "build==1.2.2.post1",
    "radon>=6.0.1",
    "semgrep>=1.85.0",
]
typing = [
    "mypy==1.16.1",
    "pyright==1.1.403",
]
build = [
    "build==1.2.2.post1",
    "setuptools>=61.0",
    "wheel",
]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "radon>=6.0.1",
]
lint = [
    "ruff==0.12.3",
    "vulture==2.14",
]
security = [
    "bandit==1.8.6",
    "pip-audit==2.9.0",
    "semgrep>=1.85.0",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    "build",
    "dist",
    "*.egg-info"
]
preview = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "N",      # pep8 naming 
    "D",      # pydocstyle
    "D401",   # non-imperative mood
    "D415",   # missing terminal punctuations
    "D416",   # missing section name colon
    "D417",   # undocumented param
    "DOC201", # docstring missing returns
    "DOC402", # docstring missing yields
    "DOC501", # docstring missing exception
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "C90",    # mccabe complexity
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "A",      # flake8-builtins
    "PTH",    # flake8-use-pathlib
    "B",      # flake8-bugbear
    "TID",    # flake8-tidy-imports
]
ignore = [
    "B006",
    "D203",
    "D212"
]

[tool.ruff.lint.isort]
known-first-party = ["engine"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = [
    "ignore::DeprecationWarning:click.*",
    "ignore::DeprecationWarning:weasel.*",
    "ignore:Importing 'parser.split_arg_string' is deprecated:DeprecationWarning",
]

# coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "def __str__",
    "def __init__",
]

[tool.coverage.html]
directory = "htmlcov"

# bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# setuptools configuration
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]
exclude = [
    "tests*", "scripts*", "docs*", "portal*", "mappings*", 
    "model*", "output*", "logs*", "test_data*", "ontologies*"
] 

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
